[build-system]
requires = ["setuptools>=70.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dub"
requires-python = ">=3"
authors = [{ name = "Pradish Bijukchhe", email = "pradish@sandbox.com.np" }]
description = "A cli utility that sends low disk warning noftications and cleanups."
readme = "README.md"
license = { file = "LICENSE" }
keywords = []
classifiers = ["Programming Language :: Python :: 3"]
dynamic = ["version", "dependencies"]


[project.urls]
Homepage = "https://github.com/sandbox-pokhara/dub"
Issues = "https://github.com/sandbox-pokhara/dub/issues"

[project.scripts]
dub = "dub.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"dub" = "dub"

[tool.setuptools.dynamic]
version = { attr = "dub.__version__" }
dependencies = { file = "requirements.txt" }

[tool.isort]
line_length = 79
force_single_line = true

[tool.black]
line-length = 79
preview = true

[tool.pyright]
include = ["dub", "test.py"]
typeCheckingMode = "strict"
