[build-system]
requires = ["setuptools>=70.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "disk-cleanup"
requires-python = ">=3"
authors = [{ name = "Pradish Bijukchhe", email = "pradish@sandbox.com.np" }]
description = "A cli utility that sends low disk warning notifications and cleanups."
readme = "README.md"
license = { file = "LICENSE" }
keywords = []
classifiers = ["Programming Language :: Python :: 3"]
dynamic = ["version", "dependencies"]


[project.urls]
Homepage = "https://github.com/sandbox-pokhara/disk-cleanup"
Issues = "https://github.com/sandbox-pokhara/disk-cleanup/issues"

[project.scripts]
disk-cleanup = "disk_cleanup.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"disk_cleanup" = "disk_cleanup"

[tool.setuptools.dynamic]
version = { attr = "disk_cleanup.__version__" }
dependencies = { file = "requirements.txt" }

[tool.isort]
line_length = 79
force_single_line = true

[tool.black]
line-length = 79
preview = true

[tool.pyright]
include = ["disk_cleanup", "test.py"]
typeCheckingMode = "strict"
